k8s/teamwald/chough-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: chough
    delcosw: coypu
  name: chough
  namespace: teamwald
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chough
  template:
    metadata:
      labels:
        io.kompose.service: chough
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: gmail-secret
      containers:
        - image: aaronw/chough:latest
          imagePullPolicy: Never
          name: chough
          ports:
            - containerPort: 9099
              protocol: TCP
          volumeMounts:
            - name: secret-volume
              readOnly: true
              mountPath: "/etc/gmail-secret"
      restartPolicy: Always
