k8s/teamwald/magpie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.delcosw.service: magpie
  name: magpie
spec:
  replicas: 1
  selector:
    matchLabels:
      io.delcosw.service: magpie
  template:
    metadata:
      labels:
        io.delcosw.service: magpie
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: gmail-secret
      containers:
        - image: aaronw/magpie:latest
          imagePullPolicy: Never
          name: magpie
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: secret-volume
              readOnly: true
              mountPath: "/etc/gmail-secret"
      restartPolicy: Always
