k8s/teamwald/magpie-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.delcosw.service: magpie
  name: magpie
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.delcosw.service: magpie
