k8s/teamwald/ubipoller-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ubipoller
  name: ubipoller
  namespace: teamwald
spec:
  type: LoadBalancer
  selector:
    io.kompose.service: ubipoller
